--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
 page-home {
-
+  .home-buttons {
+    display: flex;
+    justify-content: space-between;
+  }
+  ion-icon {
+    font-size: 40px;
+    font-weight: 900;
+  }
 }
